--- a/Riot/SupportingFiles/Info.plist
+++ b/Riot/SupportingFiles/Info.plist
@@ -50,10 +50,8 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<!-- <key>ITSAppUsesNonExemptEncryption</key>
-	<true/>
 	<key>ITSEncryptionExportComplianceCode</key>
-	<string>d1dd539c-d21c-43e2-92e2-212c5269565c</string> -->
+	<string>d1dd539c-d21c-43e2-92e2-212c5269565c</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>http</string>
@@ -94,6 +92,8 @@
 	<array>
 		<string>audio</string>
 		<string>location</string>
+		<string>processing</string>
+		<string>push-to-talk</string>
 		<string>remote-notification</string>
 		<string>voip</string>
 	</array>
